--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,7 +9,7 @@
     <div style="position: absolute; left: 0px; width: 400px; top: 0; bottom: 0;"></div>
     <!--map-->
     <div id="map" style="position: absolute; right: 0; left: 400px; top: 0; bottom: 0;"></div>
-    
+
     <!--javascript imports-->
     <script src="leaflet.js"></script>
     <!--The code below actually generates the map. Any code you would like to add
@@ -28,7 +28,9 @@
       	ext: 'png'
       }).addTo(map);
 
-      L.marker([50.5, 30.5]).addTo(map);
+      L.marker([39.9535982,-75.1937375]).addTo(map);
+      L.marker([31.237399, 121.475034]).addTo(map);
+      L.marker([42.372987, -71.117899]).addTo(map);
     </script>
   </body>
 </html>
